# FlowyML

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DESIGN.md  DOCKER.md  IMPLEMENTATION_STATUS.md  LICENSE  MANIFEST.in  Makefile  QUICKSTART.md  QUICK_REFERENCE.md  README.md  START_HERE.md  TODO.md  demo_ui_integration.py  docker-compose.yml  examples.py  mkdocs.yml  pyproject.toml  rebrand.py  ruff.toml  seed_data.py  seed_data_enhanced.py  setup.py  test_artifacts_metrics.py  uniflow.yaml.example  verify_api.py  versions.json
.github/: WORKFLOWS_GUIDE.md
.github/workflows/: MANUAL_DOCS_PUBLISH.yml  MANUAL_PYPI_PUBLISH.yml  PRECOMMITS.yml  PR_PREVIEW.yml  RELEASE.yml  UTESTS.yml
.playwright-mcp/: training-history-7e60fbc6-ed54-44ed-8c69-4a865a4e4bd9.json
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/INSTALLATION/: index.html
1.1.0/QUICK_REFERENCE/: index.html
1.1.0/advanced_features/: index.html
1.1.0/architecture/: index.html
1.1.0/contributing/: index.html
1.1.0/deployment/: index.html
1.1.0/examples/: index.html
1.1.0/getting-started/: index.html
1.1.0/resources/: index.html
1.1.0/search/: search_index.json
1.2.0/: 404.html  index.html  objects.inv  sitemap.xml
1.2.0/INSTALLATION/: index.html
1.2.0/QUICK_REFERENCE/: index.html
1.2.0/advanced_features/: index.html
1.2.0/architecture/: index.html
1.2.0/contributing/: index.html
1.2.0/deployment/: index.html
1.2.0/examples/: index.html
1.2.0/getting-started/: index.html
1.2.0/resources/: index.html
1.2.0/search/: search_index.json
1.3.0/: 404.html  index.html  objects.inv  sitemap.xml
1.3.0/FEATURES/: index.html
1.3.0/INSTALLATION/: index.html
1.3.0/QUICK_REFERENCE/: index.html
1.3.0/advanced_features/: index.html
1.3.0/architecture/: index.html
1.3.0/async_execution/: index.html
1.3.0/contributing/: index.html
1.3.0/deployment/: index.html
1.3.0/examples/: index.html
1.3.0/getting-started/: index.html
1.3.0/migration_guide/: index.html
1.3.0/resources/: index.html
1.3.0/search/: search_index.json
1.4.0/: 404.html  index.html  objects.inv  sitemap.xml
1.4.0/FEATURES/: index.html
1.4.0/INSTALLATION/: index.html
1.4.0/QUICK_REFERENCE/: index.html
1.4.0/advanced_features/: index.html
1.4.0/architecture/: index.html
1.4.0/async_execution/: index.html
1.4.0/contributing/: index.html
1.4.0/deployment/: index.html
1.4.0/examples/: index.html
1.4.0/getting-started/: index.html
1.4.0/migration_guide/: index.html
1.4.0/production_deployment/: index.html
1.4.0/resources/: index.html
1.4.0/search/: search_index.json
1.5.0/: 404.html  index.html  sitemap.xml
1.5.0/FEATURES/: index.html
1.5.0/INSTALLATION/: index.html
1.5.0/QUICK_REFERENCE/: index.html
1.5.0/advanced_features/: index.html
1.5.0/architecture/: index.html
1.5.0/async_execution/: index.html
1.5.0/contributing/: index.html
1.5.0/deployment/: index.html
1.5.0/examples/: index.html
1.5.0/getting-started/: index.html
1.5.0/migration_guide/: index.html
1.5.0/production_deployment/: index.html
1.5.0/resources/: index.html
1.5.0/search/: search_index.json
1.6.0/: 404.html  index.html  objects.inv  sitemap.xml
1.6.0/FEATURES/: index.html
1.6.0/INSTALLATION/: index.html
1.6.0/QUICK_REFERENCE/: index.html
1.6.0/advanced_features/: index.html
1.6.0/architecture/: index.html
1.6.0/async_execution/: index.html
1.6.0/contributing/: index.html
1.6.0/deployment/: index.html
1.6.0/examples/: index.html
1.6.0/getting-started/: index.html
1.6.0/migration_guide/: index.html
1.6.0/production_deployment/: index.html
1.6.0/resources/: index.html
1.6.0/search/: search_index.json
1.7.1/: 404.html  index.html  sitemap.xml
1.7.1/FEATURES/: index.html
1.7.1/INSTALLATION/: index.html
1.7.1/QUICK_REFERENCE/: index.html
1.7.1/advanced_features/: index.html
1.7.1/architecture/: index.html
1.7.1/async_execution/: index.html
1.7.1/contributing/: index.html
1.7.1/deployment/: index.html
1.7.1/examples/: index.html
1.7.1/getting-started/: index.html
1.7.1/migration_guide/: index.html
1.7.1/production_deployment/: index.html
1.7.1/resources/: index.html
1.7.1/search/: search_index.json
1.7.2/: 404.html  index.html  objects.inv  sitemap.xml
1.7.2/FEATURES/: index.html
docs/: CHEATSHEET.md  CLI_REFERENCE.md  DESIGN.md  DEVELOPMENT.md  FEATURES.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  QUICKSTART.md  QUICK_REFERENCE.md  SUMMARY.md  UI_ARCHITECTURE.md  UI_GUIDE.md  UI_INTEGRATION_SUMMARY.md  advanced_features.md  architecture.md  async_execution.md  contributing.md  deployment.md  examples.md  getting-started.md  index.md  migration_guide.md  production_deployment.md  resources.md
docs/api/: cli.md  (+15 more)
examples/: README.md  advanced_orchestration.py  caching_pipeline.py  clean_pipeline.py  complete_demo.py  conditional_pipeline.py  demo_pipeline.py  examples.py  resources_example.py  simple_pipeline.py  simple_pipeline_ui.py  step_grouping_example.py  training_pipeline.py  training_pipeline_dataset.py  ui_integration_example.py
flowy/: __init__.py
flowyml/: __init__.py
scripts/: seed_data.py  verify_seed_data.py
tests/: __init__.py  base.py  demo_ui_integration.py  test_advanced_features.py  test_api_integration.py  test_artifacts_metrics.py  test_asset_base.py  test_assets.py  test_assets_extended.py  test_auth.py  test_auth_integration.py  test_auto_extraction.py  test_cache_comprehensive.py  test_caching.py  test_caching_extended.py  test_cli_features.py  test_conditional_assets.py  test_conditional_execution.py  test_config.py  test_config_loading.py  test_context.py  test_context_advanced.py  test_context_extended.py  test_core.py  test_core_enhancements.py  test_dataset.py  test_end_to_end.py  test_error_handling.py  test_execution_api.py  test_executor.py  test_experiment.py  test_experiments.py  test_flowy.py  test_generic_bridge.py  test_graph.py  test_graph_comprehensive.py  test_hooks.py  test_integration.py  test_keras_materializer.py  test_leaderboard.py  (+37 more)
uniflow/: __init__.py
(+1044 files in other folders)
