[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uniflow"
version = "0.1.0"
description = "Next-Generation ML Pipeline Framework"
readme = "README.md"
authors = [
    {name = "UniFlow Team", email = "team@uniflow.ai"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "fastapi (>=0.122.0,<0.123.0)",
]

[project.optional-dependencies]
pytorch = ["torch>=2.0.0"]
tensorflow = ["tensorflow>=2.12.0"]
sklearn = ["scikit-learn>=1.0.0"]
ui = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
]
all = [
    "torch>=2.0.0",
    "tensorflow>=2.12.0",
    "scikit-learn>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "websockets>=11.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
    "mypy>=0.990",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "tensorflow>=2.12.0",
    "scikit-learn>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/uniflow/uniflow"
Documentation = "https://docs.uniflow.ai"
Repository = "https://github.com/uniflow/uniflow"
Changelog = "https://github.com/uniflow/uniflow/blob/main/CHANGELOG.md"

[project.scripts]
uniflow = "uniflow.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["uniflow"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=uniflow --cov-report=term-missing"
