[tool.poetry]
name = "uniflow"
version = "0.1.0"
description = "Next-Generation ML Pipeline Framework"
authors = ["UniFlow Team <team@uniflow.ai>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/uniflow/uniflow"
repository = "https://github.com/uniflow/uniflow"
documentation = "https://docs.uniflow.ai"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "uniflow"}]

[tool.poetry.dependencies]
python = ">=3.8"
pydantic = ">=2.0.0"
click = ">=8.0.0"
pyyaml = ">=6.0"
numpy = ">=1.20.0"
pandas = ">=1.3.0"
fastapi = ">=0.122.0,<0.123.0"
toml = ">=0.10.2"
# Optional dependencies (extras)
torch = {version = ">=2.0.0", optional = true}
tensorflow = {version = ">=2.12.0", optional = true}
scikit-learn = {version = ">=1.0.0", optional = true}
google-cloud-aiplatform = {version = ">=1.35.0", optional = true}
google-cloud-storage = {version = ">=2.10.0", optional = true}
uvicorn = {version = ">=0.23.0", extras = ["standard"], optional = true}
websockets = {version = ">=11.0", optional = true}
python-multipart = {version = ">=0.0.6", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
black = ">=22.0.0"
ruff = ">=0.1.0"
mypy = ">=0.990"
pre-commit = ">=2.0.0"
# Include framework dependencies for testing
tensorflow = ">=2.12.0"
scikit-learn = ">=1.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = ">=1.5.0"
mkdocs-material = ">=9.0.0"
mike = ">=2.0.0"

[tool.poetry.extras]
pytorch = ["torch"]
tensorflow = ["tensorflow"]
sklearn = ["scikit-learn"]
gcp = ["google-cloud-aiplatform", "google-cloud-storage"]
ui = ["fastapi", "uvicorn", "websockets", "python-multipart"]
all = [
    "torch",
    "tensorflow",
    "scikit-learn",
    "google-cloud-aiplatform",
    "google-cloud-storage",
    "uvicorn",
    "websockets",
    "python-multipart",
]

[tool.poetry.scripts]
uniflow = "uniflow.cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=uniflow --cov-report=term-missing"
asyncio_mode = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "poetry build"
