[tool.poetry]
name = "flowyml"
version = "1.1.0"
description = "Next-Generation ML Pipeline Framework"
authors = ["flowyml Team <support@unicolab.ai>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/UnicoLab/FlowyML"
repository = "https://github.com/UnicoLab/FlowyML"
documentation = "https://unicolab.github.io/FlowyML/latest"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "flowyml"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pydantic = ">=2.0.0"
click = ">=8.0.0"
pyyaml = ">=6.0"
numpy = ">=1.20.0"
pandas = ">=1.3.0"
fastapi = ">=0.122.0,<0.123.0"
toml = ">=0.10.2"
loguru = "^0.7.3"
croniter = "^2.0.1"
pytz = "^2024.1"

# Optional dependencies (extras)
torch = {version = ">=2.0.0", optional = true}
tensorflow = {version = ">=2.12.0", optional = true}
keras = {version = "^3.0", optional = true}
scikit-learn = {version = ">=1.0.0", optional = true}
google-cloud-aiplatform = {version = ">=1.35.0", optional = true}
google-cloud-storage = {version = ">=2.10.0", optional = true}
uvicorn = {version = ">=0.23.0", extras = ["standard"], optional = true}
websockets = {version = ">=11.0", optional = true}
python-multipart = {version = ">=0.0.6", optional = true}

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
pytest-xdist = "^3.5"
pytest-mock = "^3.12"
pre-commit = ">=2.0.0"
ipykernel = "^7.1.0"

# Type checking
mypy = "^1.7"
types-pyyaml = "^6.0"

# Code formatting and linting
black = "^23.11"
ruff = "^0.1.0"
isort = "^5.12"


# Include framework dependencies for testing
tensorflow = ">=2.12.0"
scikit-learn = ">=1.0.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"
mkdocs-material-extensions = ">=1.3.1"
mkdocs-gen-files = "^0.5.0"
mkdocstrings-python = "^0.9.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-redirects = "^1.2.2"
mike = ">=2.0.0"
griffe = "^0.25.0"
mkdocs-include-markdown-plugin = "^7.2.0"

[tool.poetry.extras]
pytorch = ["torch"]
tensorflow = ["tensorflow"]
sklearn = ["scikit-learn"]
gcp = ["google-cloud-aiplatform", "google-cloud-storage"]
ui = ["fastapi", "uvicorn", "websockets", "python-multipart"]
all = [
    "torch",
    "tensorflow",
    "scikit-learn",
    "google-cloud-aiplatform",
    "google-cloud-storage",
    "uvicorn",
    "websockets",
    "python-multipart",
]

[tool.poetry.scripts]
flowyml = "flowyml.cli.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=flowyml --cov-report=term-missing"
asyncio_mode = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "poetry build"
